<resources>
    <string name="app_name">TbcAcademy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_title">Welcome</string>
    <string name="btn1_text">Register</string>
    <string name="btn2_text">Login</string>
    <string name="login_page_title">Login</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="register_page_title">Register</string>
    <string name="email">Email</string>
    <string name="log_out">Log out</string>
    <string name="home_page_title">Home</string>
    <string name="remember_me">Remember me</string>
    <string name="profile">Profile</string>
    <string name="loading">Loading</string>
    <string name="home">Home</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register now</string>
</resources>