<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".presentation.ui.LogInFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/top_design"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/top_round_design"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_page_title"
        android:textSize="48sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/main_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/standing"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/page_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@drawable/light_purple_background"
        android:layout_marginTop="25dp"
        android:textColor="@color/light_purple"
        android:textColorHint="@color/light_purple"
        android:paddingVertical="10dp"
        android:paddingHorizontal="30dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/main_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:background="@drawable/light_purple_background"
        android:layout_marginTop="46dp"
        android:textColor="@color/light_purple"
        android:textColorHint="@color/light_purple"
        android:paddingVertical="10dp"
        android:paddingHorizontal="30dp"
        android:layout_marginHorizontal="30dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn2_text"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:fontFamily="@font/roboto_bold"
        android:background="@drawable/dark_purple_background"
        android:layout_marginTop="84dp"
        android:textAllCaps="false"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="40dp"
        />

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/loaderLayout"-->
<!--        android:background="#AEA8A8A8"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        >-->
<!--        <ProgressBar-->
<!--            android:id="@+id/loader"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            />-->

<!--        <androidx.appcompat.widget.AppCompatTextView-->
<!--            android:id="@+id/loadingText"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textAlignment="center"-->
<!--            android:text="@string/loading"-->
<!--            android:textSize="16sp"-->
<!--            android:textColor="@color/black"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/loader"-->
<!--            />-->
<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>